Bug 72587 - CRASH - Sigsegv when closing multiple Template Manager windows
Summary: CRASH - Sigsegv when closing multiple Template Manager windows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: All Linux (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0 target:4.3.4
Keywords:
: 64364 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-11 07:59 UTC by Alex Thurgood
Modified: 2015-01-25 00:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sigsegv bt (11.65 KB, text/plain)
2013-12-11 07:59 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2013-12-11 07:59:18 UTC
Created attachment 90598 [details]
sigsegv bt

Version: 4.3.0.0.alpha0+
Build ID: ad0a87f71e1b1b59febfccd956fde5c365c28813



How to reproduce :


1) Start LibreOffice

2) In the Start Center, click on the Templates button.

3) As it takes forever to initialize, the user thinks that the first click hasn't worked, so he/she clicks again, and again, until finally...multiple Template Manager windows appear (stacked one on top of the other)

4)Now close the Main application window, then attempt to close one of the surviving Template Manager windows.

5) LO calls sigsegv and dumps core. Backtrace enclosed.
Comment 1 Alex Thurgood 2013-12-11 08:01:06 UTC
If the app didn't allow multiple asynchronous instances of the Template Manager dialog, perhaps this problem would not exist ?
Comment 2 Cédric Bosdonnat 2013-12-11 08:11:19 UTC
Now working on LibreOffice as volunteer I restricted my action's area to CMIS-related topics. Removed me from CC
Comment 3 Alex Thurgood 2013-12-11 09:52:26 UTC
(In reply to comment #2)
> Now working on LibreOffice as volunteer I restricted my action's area to
> CMIS-related topics. Removed me from CC

Oh sorry Cedric, wasn't aware of that.

Alex
Comment 4 Simon Wilper 2014-01-12 20:29:11 UTC
I just built from the git HEAD and I am experiencing no Segfault but another annoying situation: I can open the Template Manager multiple times but the one opened last is the only one that is controllable.

Maybe it would be wise to make the Template Manager Dialog modal?

I looked into the
sfx2/source/doc/templatedlg.src
and found the DLG_TEMPLATE_MANAGER to be a ModelessDialog.

But when I change it to ModalDialog I get an empty gray almost fullscreen sized window I cannot resize and neither close.

Maybe anyone can point me into the right direction or has another idea.
Comment 5 Joel Madero 2014-03-09 01:36:29 UTC
Version: 4.3.0.0.alpha0
Date:   Tue Feb 25 19:58:48 2014 +0100 
Platform :Ubuntu 13.10
DE: GNOME3

Confirmed
New
Major - crash but not going to affect many users IMHO so not critical
High - default seems appropriate.

For me I see no "takes forever to initialize" problem - template manager starts almost immediately but I do see the seg fault when I follow your steps.
Comment 6 Joel Madero 2014-03-09 03:51:45 UTC
Not a new issue - verified on 4.2.2.1 also, updating version
Comment 7 Caolán McNamara 2014-10-14 15:59:13 UTC
For a dialog a parent of "DIALOG_NO_PARENT" means a dialog has no parent, so even if its modal it is modal of nothing while NULL means "automatically find a parent".
Comment 9 Caolán McNamara 2014-10-14 16:26:42 UTC
https://gerrit.libreoffice.org/11978 proposed for 4.3
Comment 10 Adolfo Jayme Barrientos 2015-01-25 00:37:22 UTC
*** Bug 64364 has been marked as a duplicate of this bug. ***