Resolves: fdo#72587 make template dialog Modal

Change-Id: Iefb63bc7cdbff2217f16c1a72fc271361227588b